// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink should render with active link 1`] = `
<body>
  <div>
    <span
      class="bg-gray-50 text-gray-900 rounded-lg py-2 px-3 font-medium hover:text-gray-900"
    >
      Label
    </span>
  </div>
</body>
`;

exports[`NavLink should render with inactive link 1`] = `
<body>
  <div>
    <span
      class="text-gray-600 rounded-lg py-2 px-3 font-medium hover:text-gray-900"
    >
      Label
    </span>
  </div>
</body>
`;
